tests/baselines/reference/incrementOnTypeParameter(strict=true).errors.txt
incrementOnTypeParameter.ts(2,5): error TS2564: Property 'a' has no initializer and is not definitely assigned in the constructor.
incrementOnTypeParameter.ts(4,9): error TS2356: An arithmetic operand must be of type 'any', 'number', 'bigint' or an enum type.
incrementOnTypeParameter.ts(5,39): error TS2356: An arithmetic operand must be of type 'any', 'number', 'bigint' or an enum type.
incrementOnTypeParameter.ts(5,39): error TS2454: Variable 'i' is used before being assigned.


==== incrementOnTypeParameter.ts (4 errors) ====
    class C<T> {
        a: T;
        ~
!!! error TS2564: Property 'a' has no initializer and is not definitely assigned in the constructor.
        foo() {
            this.a++; 
            ~~~~~~
!!! error TS2356: An arithmetic operand must be of type 'any', 'number', 'bigint' or an enum type.
            for (var i: T, j = 0; j < 10; i++) { 
                                          ~
!!! error TS2356: An arithmetic operand must be of type 'any', 'number', 'bigint' or an enum type.
                                          ~
!!! error TS2454: Variable 'i' is used before being assigned.
            }
        }
    }
    